fix sections not showing (CASCADING style sheets)

--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -1,7 +1,9 @@
+
 .background {
     position: fixed;
     width: 100%;
     height: 100%;
+    z-index: 0;
 }
 
 .background-container {
@@ -9,7 +11,6 @@
     width: 100%;
     height: 100%;
     background-color: #292f36;
-    
 }
 
 #c1,
@@ -33,10 +34,16 @@
     top:50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 95%;
-    height: 95%;
+    width: 100%;
+    height: 100%;
     background-color: rgba(255,255,255, 0.2);
     box-shadow: 1px 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(5px);
     z-index: 1;
+}
+
+.nav,
+main .row,
+footer .container {
+    z-index: 10;
 }
